fix: overflow

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -2,7 +2,7 @@ body{
   min-height: 100vh;
   font-size: 12px;
   max-width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .new-befakepost{
